# designExercise

./: CMakeLists.txt  README.md  makeProgram.sh  runCodeWithDebug.sh  testPlan.md  testPlan.txt
inc/: buttons.h  game.h  led.h
src/: buttons.cpp  game.cpp  led.cpp  main.cpp
